@@ -55,6 +55,10 @@ public class MultiDimensionalEvaluationController {
     @GetMapping
     public String list(Model model,
                        @RequestParam(required = false) Long periodId,
+                       @RequestParam(required = false) Long filterDeptId,
+                       @RequestParam(required = false) String keyword,
+                       @RequestParam(required = false) String filterStatus,
+                       @RequestParam(defaultValue = "1") int page,
                        @AuthenticationPrincipal UserDetails userDetails) {
 
         Long empId = Long.parseLong(userDetails.getUsername());
@@ -68,94 +72,37 @@ public class MultiDimensionalEvaluationController {
         if (selectedPeriod != null) {
             model.addAttribute("selectedPeriod", selectedPeriod);
 
-            // 내가 평가해야 할 매핑 중 'SUBORDINATE' 관계인 것만 필터링 (다면평가)
+            // 서비스 레이어에 필터링 및 페이징 위임 (Thin Controller)
+            int pageSize = 10;
+            com.ees.eval.dto.MultiDimensionalEvalPageDTO pageData = mappingService.getMultiDimensionalTasks(
+                    selectedPeriod.periodId(), empId, filterDeptId, filterStatus, keyword, page, pageSize);
+            
+            model.addAttribute("pageData", pageData);
+            
+            // 필터 상태 유지
+            model.addAttribute("filterDeptId", filterDeptId);
+            model.addAttribute("keyword", keyword);
+            model.addAttribute("filterStatus", filterStatus);
+
+            // 필터 드롭다운용 부서 목록 추출
             List<EvaluatorMappingDTO> myTasks = mappingService.getMyEvaluationTasks(selectedPeriod.periodId(), empId);
-            List<EvaluatorMappingDTO> multiTasks = myTasks.stream()
+            List<Long> evaluateeIds = myTasks.stream()
                     .filter(m -> "SUBORDINATE".equals(m.relationTypeCode()))
-                    .collect(Collectors.toList());
-
-            model.addAttribute("tasks", multiTasks);
-
-            // ========== [최적화] 데이터 일괄 조회 ==========
-            if (!multiTasks.isEmpty()) {
-                // (A) 모든 매핑 ID 수집 및 평가 데이터 일괄 조회
-                java.util.List<Long> allMappingIds = multiTasks.stream()
-                        .map(EvaluatorMappingDTO::mappingId)
-                        .collect(Collectors.toList());
-
-                // (B) 피평가자 ID 수집 및 SELF 매핑 일괄 조회
-                java.util.List<Long> evaluateeIds = multiTasks.stream()
-                        .map(EvaluatorMappingDTO::evaluateeId)
+                    .map(EvaluatorMappingDTO::evaluateeId)
+                    .distinct()
+                    .toList();
+            
+            if (!evaluateeIds.isEmpty()) {
+                List<com.ees.eval.domain.Employee> evaluatees = employeeMapper.findByIds(evaluateeIds);
+                List<com.ees.eval.dto.DepartmentDTO> filterDepts = evaluatees.stream()
+                        .map(e -> com.ees.eval.dto.DepartmentDTO.builder()
+                                .deptId(e.getDeptId())
+                                .deptName(e.getDeptName())
+                                .build())
                         .distinct()
-                        .collect(Collectors.toList());
-
-                // SELF 매핑 추출 (findByEvaluateeIds로 한 번에 조회)
-                java.util.Map<Long, Long> selfMappingIdByEvaluatee = new java.util.HashMap<>();
-                java.util.List<Long> selfMappingIds = new java.util.ArrayList<>();
-                // 피평가자별 전체 매핑 그룹 (잠금 체크용 재사용)
-                java.util.Map<Long, java.util.List<com.ees.eval.domain.EvaluatorMapping>> allMappingsByEvaluatee = new java.util.HashMap<>();
-                java.util.List<Long> downstreamMappingIds = new java.util.ArrayList<>();
-                if (!evaluateeIds.isEmpty()) {
-                    java.util.List<com.ees.eval.domain.EvaluatorMapping> allRelatedMappings =
-                            evaluatorMappingMapper.findByEvaluateeIds(selectedPeriod.periodId(), evaluateeIds);
-                    allMappingsByEvaluatee = allRelatedMappings.stream()
-                            .collect(Collectors.groupingBy(com.ees.eval.domain.EvaluatorMapping::getEvaluateeId));
-                    for (com.ees.eval.domain.EvaluatorMapping m : allRelatedMappings) {
-                        if ("SELF".equals(m.getRelationTypeCode()) && "n".equals(m.getIsDeleted())) {
-                            selfMappingIdByEvaluatee.put(m.getEvaluateeId(), m.getMappingId());
-                            selfMappingIds.add(m.getMappingId());
-                        }
-                        if ("MANAGER".equals(m.getRelationTypeCode()) || "EXECUTIVE".equals(m.getRelationTypeCode())) {
-                            if (!allMappingIds.contains(m.getMappingId())) {
-                                downstreamMappingIds.add(m.getMappingId());
-                            }
-                        }
-                    }
-                }
-
-                // 전체 관련 매핑 ID (내 것 + SELF + 다운스트림)
-                java.util.List<Long> allRelMappingIds = new java.util.ArrayList<>(allMappingIds);
-                allRelMappingIds.addAll(selfMappingIds);
-                allRelMappingIds.addAll(downstreamMappingIds);
-
-                // (C) 평가 데이터 일괄 조회
-                java.util.Map<Long, java.util.List<Evaluation>> evalGroupMap = new java.util.HashMap<>();
-                if (!allRelMappingIds.isEmpty()) {
-                    evalGroupMap = evaluationMapper.findByMappingIds(allRelMappingIds).stream()
-                            .collect(Collectors.groupingBy(Evaluation::getMappingId));
-                }
-
-                // ========== 제출 여부 및 자가평가 확인 (메모리에서) ==========
-                java.util.Map<Long, Boolean> submittedMap = new java.util.HashMap<>();
-                java.util.Map<Long, Boolean> evaluateeSelfSubmittedMap = new java.util.HashMap<>();
-                for (EvaluatorMappingDTO task : multiTasks) {
-                    // 본인의 제출 여부
-                    java.util.List<Evaluation> evals = evalGroupMap.getOrDefault(task.mappingId(), java.util.Collections.emptyList());
-                    boolean isSubmitted = evals.stream()
-                            .anyMatch(e -> "SUBMITTED".equals(e.getConfirmStatusCode()));
-                    submittedMap.put(task.mappingId(), isSubmitted);
-
-                    // 피평가자(부서장)의 자가평가 제출 여부
-                    Long selfMappingId = selfMappingIdByEvaluatee.get(task.evaluateeId());
-                    boolean isSelfSubmitted = false;
-                    if (selfMappingId != null) {
-                        java.util.List<Evaluation> selfEvals = evalGroupMap.getOrDefault(selfMappingId, java.util.Collections.emptyList());
-                        isSelfSubmitted = selfEvals.stream()
-                                .anyMatch(e -> "SUBMITTED".equals(e.getConfirmStatusCode()));
-                    }
-                    evaluateeSelfSubmittedMap.put(task.mappingId(), isSelfSubmitted);
-                }
-                model.addAttribute("submittedMap", submittedMap);
-                model.addAttribute("evaluateeSelfSubmittedMap", evaluateeSelfSubmittedMap);
-
-                // 역순 진행 방지 (사전 조회 데이터 활용 — 추가 DB 호출 없음)
-                java.util.Map<Long, Boolean> lockMap = mappingService.checkEvaluationLockBulk(
-                        allMappingIds, allMappingsByEvaluatee, evalGroupMap);
-                model.addAttribute("lockMap", lockMap);
-            } else {
-                model.addAttribute("submittedMap", java.util.Collections.emptyMap());
-                model.addAttribute("evaluateeSelfSubmittedMap", java.util.Collections.emptyMap());
-                model.addAttribute("lockMap", java.util.Collections.emptyMap());
+                        .sorted(java.util.Comparator.comparing(com.ees.eval.dto.DepartmentDTO::deptName))
+                        .toList();
+                model.addAttribute("departments", filterDepts);
             }
 
             if ("PLANNED".equals(selectedPeriod.statusCode())) {
